--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>Here are some links to my favorite animals</h1>
-<p>DOG</p>
-<p>Cat</p>
+  <a href="cat.html">cat</a>
+<a href="dog.html">dog</a>
 </body>
 </html>
