--- a/pages/dog.html
+++ b/pages/dog.html
@@ -7,6 +7,6 @@
 <body>
 <h1>my favorite dog</h1>
 <p> My gavorite dog is a husky</p>
-  <img src= "resources/sdog.jpg" width=200 height=auto
+  <img src= "pages/sdog.jpg" width=200 height=auto
 </body>
 </html>
