--- a/pages/cat.html
+++ b/pages/cat.html
@@ -1,1 +1,12 @@
 
+<DOCTYPE html>
+<html>
+<head>
+<title>Favorite Cat</title>
+</head>
+<body>
+<h1>my favorite cat</h1>
+<p> My gavorite cat is a garfield</p>
+  <img src= "pages/scat.jpg" width=200 height=auto
+</body>
+</html>
