--- a/pages/cat.html
+++ b/pages/cat.html
@@ -7,6 +7,6 @@
 <body>
 <h1>my favorite cat</h1>
 <p> My gavorite cat is a garfield</p>
-  <img src= "pages/scat.jpg" width=200 height=auto
+  <img src= "demo/resources/scat.jpg" width=200 height=auto
 </body>
 </html>
