--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>Here are some links to my favorite animals</h1>
-  <a href="cat.html">cat</a>
-<a href="dog.html">dog</a>
+  <a href="Pages\cat.html">cat</a>
+<a href="Pages\dog.html">dog</a>
 </body>
 </html>
