--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
 <head>
 <title>FAVORITE ANIMALS</title>
+  <link rel="stylesheet" type="text/css" href="pages\style.css">
 </head>
 <body>
 <h1>Here are some links to my favorite animals</h1>
