--- a/pages/dog.html
+++ b/pages/dog.html
@@ -3,6 +3,7 @@
 <html>
 <head>
 <title>Favorite Dog</title>
+    <link rel="stylesheet" type="text/style" href"style.css">
 </head>
 <body>
 <h1>my favorite dog</h1>
