--- a/pages/cat.html
+++ b/pages/cat.html
@@ -3,6 +3,7 @@
 <html>
 <head>
 <title>Favorite Cat</title>
+    <link rel="stylesheet" type="text/style" href"style.css">
 </head>
 <body>
 <h1>my favorite cat</h1>
