--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h1>Here are some links to my favorite animals</h1>
-  <a href="Pages\cat.html">cat</a>
+  <a href="pages\cat.html">cat</a>
 <a href="Pages\dog.html">dog</a>
 </body>
 </html>
