--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
 <h1>Here are some links to my favorite animals</h1>
   <a href="pages\cat.html">cat</a>
-<a href="Pages\dog.html">dog</a>
+<a href="pages\dog.html">dog</a>
 </body>
 </html>
