--- a/pages/dog.html
+++ b/pages/dog.html
@@ -8,6 +8,6 @@
 <body>
 <h1>my favorite dog</h1>
 <p> My gavorite dog is a husky</p>
-  <img src= "\Demo\resources\sdog.jpg" width=200 height=auto
+  <img src= "\Demo\resources\sdog.jpg" width=200 height=auto>
 </body>
 </html>
