--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <html>
 <head>
 <title>FAVORITE ANIMALS</title>
+  <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="pages\style.css">
+ 
 </head>
 <body>
 <h1>Here are some links to my favorite animals</h1>
