--- a/pages/dog.html
+++ b/pages/dog.html
@@ -3,6 +3,7 @@
 <html>
 <head>
 <title>Favorite Dog</title>
+    <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
