--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
 <h1>Here are some links to my favorite animals</h1>
   <a href="pages\cat.html">cat</a>
 <a href="pages\dog.html">dog</a>
+  
+  <p>This is a change from Github</p>
 </body>
 </html>
